@@ -110,7 +110,6 @@ setup(name='dulwich',
           'Development Status :: 4 - Beta',
           'License :: OSI Approved :: Apache Software License',
           'Programming Language :: Python :: 2.7',
-          'Programming Language :: Python :: 3.3',
           'Programming Language :: Python :: 3.4',
           'Programming Language :: Python :: 3.5',
           'Programming Language :: Python :: 3.6',
